objects/TAV4__Sales_Rep_Assignment__c.object
<CustomObject>
    <description>A member of a sales team for a sales area</description>
    <fields>
        <fullName>TAV4__Alignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alignment</label>
        <referenceTo>TAV4__Alignment__c</referenceTo>
        <relationshipLabel>Sales Rep Assignments</relationshipLabel>
        <relationshipName>Sales_Rep_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TAV4__Is_Owner__c</fullName>
        <formula>TAV4__Sales_Area__r.TAV4__Record_Owner__r.Id =  Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Record Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TAV4__Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Rep</fullName>
                    <default>true</default>
                    <label>Sales Rep</label>
                </value>
                <value>
                    <fullName>Sales Engineer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAV4__Sales_Area__c</fullName>
        <label>Sales Area</label>
        <referenceTo>TAV4__Sales_Area__c</referenceTo>
        <relationshipName>Sales_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>TAV4__Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <referenceTo>TAV4__Sales_Rep__c</referenceTo>
        <relationshipLabel>Sales Rep Assignments</relationshipLabel>
        <relationshipName>Sales_Rep_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TAV4__User__c</fullName>
        <formula>TAV4__Sales_Rep__r.TAV4__User__r.FirstName + &quot; &quot; + TAV4__Sales_Rep__r.TAV4__User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User</label>
        <type>Text</type>
    </fields>
    <label>Sales Rep Assignment</label>
    <nameField>
        <displayFormat>SRA-{0000000}</displayFormat>
        <label>Sales Rep Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Rep Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TAV4__Manager_Assignments</fullName>
        <active>true</active>
        <description>A sales manager role cannot be assigned to an account, lead or geo unit.</description>
        <errorConditionFormula>TAV4__Sales_Area__r.TAV4__Is_Assignable__c = TAV4__Sales_Rep__r.TAV4__Is_Manager__c</errorConditionFormula>
        <errorMessage>A sales manager may not be assigned to a sales rep position, and a sales rep may not be assigned to a non-assignable position in the sales hierarchy.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TAV4__Sales_rep_in_alignment</fullName>
        <active>true</active>
        <errorConditionFormula>TAV4__Sales_Area__r.TAV4__Alignment__c  !=  TAV4__Sales_Rep__r.TAV4__Alignment__c</errorConditionFormula>
        <errorDisplayField>TAV4__Sales_Rep__c</errorDisplayField>
        <errorMessage>The sales rep must be assigned to the alignment that the sales area is part of.</errorMessage>
    </validationRules>
</CustomObject>